[project]
name = "reminders"
version = "0.2.0"
description = "Reminds about events stored in YAML."
authors = [{ name = "Daniel Souza", email = "me@posix.dev.br" }]
readme = "README.md"
license = { text = "GPLv3" }
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
]

[project.urls]
homepage = "https://github.com/danisztls/reminders"

[project.scripts]
reminders = "reminders:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
